{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 52,
  "lineage": "2384469e-db68-fbdf-f07d-61dc2524e1b2",
  "resources": [
    {
      "module": "module.build_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:365269738775:instance/i-0a780f8fa9f6522aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a780f8fa9f6522aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "devsecops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071479191e4f56abe",
            "private_dns": "ip-10-0-1-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_dns": "ec2-54-224-97-138.compute-1.amazonaws.com",
            "public_ip": "54.224.97.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:365269738775:key/4b738728-3db3-4a53-a9d3-f250316260da",
                "throughput": 125,
                "volume_id": "vol-071dacd2b4ba1b351",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de8d6e53b9c76a02",
            "tags": {
              "Name": "build-server",
              "Type": "Build-Server"
            },
            "tags_all": {
              "Name": "build-server",
              "Type": "Build-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0903b55f5aaf3acce"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:365269738775:instance/i-0839aa80357af926a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0839aa80357af926a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "devsecops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a962888207e5dc7",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-34-201-218-23.compute-1.amazonaws.com",
            "public_ip": "34.201.218.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:365269738775:key/4b738728-3db3-4a53-a9d3-f250316260da",
                "throughput": 125,
                "volume_id": "vol-03080e0548a65612d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de8d6e53b9c76a02",
            "tags": {
              "Name": "jenkins-master",
              "Type": "Jenkins-Master"
            },
            "tags_all": {
              "Name": "jenkins-master",
              "Type": "Jenkins-Master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0903b55f5aaf3acce"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.security_groups.aws_security_group.jenkins",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365269738775:security-group/sg-0903b55f5aaf3acce",
            "description": "Security group for Jenkins build server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0903b55f5aaf3acce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "365269738775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e49fdedcfe7070"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365269738775:security-group/sg-0c85e93616649b396",
            "description": "Security group for SonarQube server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c85e93616649b396",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube-sg",
            "name_prefix": "",
            "owner_id": "365269738775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube-sg"
            },
            "tags_all": {
              "Name": "sonarqube-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e49fdedcfe7070"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:365269738775:instance/i-0073ecada2190038e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0073ecada2190038e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "devsecops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-052582c57dbae1ac0",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-34-207-169-3.compute-1.amazonaws.com",
            "public_ip": "34.207.169.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:365269738775:key/4b738728-3db3-4a53-a9d3-f250316260da",
                "throughput": 125,
                "volume_id": "vol-0220d2c90f95e9c5d",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de8d6e53b9c76a02",
            "tags": {
              "Name": "sonarqube-server",
              "Type": "SonarQube"
            },
            "tags_all": {
              "Name": "sonarqube-server",
              "Type": "SonarQube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c85e93616649b396"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.security_groups.aws_security_group.sonarqube",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365269738775:internet-gateway/igw-0457049efbaf86660",
            "id": "igw-0457049efbaf86660",
            "owner_id": "365269738775",
            "tags": {
              "Name": "devsecops-igw"
            },
            "tags_all": {
              "Name": "devsecops-igw"
            },
            "vpc_id": "vpc-037e49fdedcfe7070"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365269738775:route-table/rtb-0e53af573d94bfb3a",
            "id": "rtb-0e53af573d94bfb3a",
            "owner_id": "365269738775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0457049efbaf86660",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecops-public-rt"
            },
            "tags_all": {
              "Name": "devsecops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e49fdedcfe7070"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eee577e9a1f8a14d",
            "route_table_id": "rtb-0e53af573d94bfb3a",
            "subnet_id": "subnet-0de8d6e53b9c76a02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365269738775:subnet/subnet-0de8d6e53b9c76a02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de8d6e53b9c76a02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "365269738775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-public-subnet"
            },
            "tags_all": {
              "Name": "devsecops-public-subnet"
            },
            "vpc_id": "vpc-037e49fdedcfe7070"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365269738775:vpc/vpc-037e49fdedcfe7070",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05763d116aaafed0f",
            "default_route_table_id": "rtb-05ee1bb051ac5b1ff",
            "default_security_group_id": "sg-02819623565a2f3bc",
            "dhcp_options_id": "dopt-05758a13926924ebb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037e49fdedcfe7070",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ee1bb051ac5b1ff",
            "owner_id": "365269738775",
            "tags": {
              "Name": "devsecops-vpc"
            },
            "tags_all": {
              "Name": "devsecops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}